# openMVG

src/openMVG/: CMakeLists.txt
src/openMVG/cameras/: CMakeLists.txt
src/openMVG/clustering/: CMakeLists.txt
src/openMVG/exif/: CMakeLists.txt
src/openMVG/geodesy/: CMakeLists.txt
